--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <head>
         <title>chorozon's crucifix</title>
-        <link rel="stylesheet" href="../styles/styles.css">
-        <script src="../scripts/scripts.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles/styles.css">
+        <script src="scripts/scripts.js"></script>
     </head>
 
         <body>
