fixed css images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <body>
             <header>
-                <img class="topBanner" src="../images/headerBackground.gif">
+                <img class="topBanner" src="images/headerBackground.gif">
                 <nav><ul>
                     <li class="logo"><a href="index.html">dmc logo</a></li>
                     <li><a href="summon.html">summon</a></li>
@@ -64,13 +64,13 @@
 
             <section class="feature-box images">
                 <figure>
-                <img class="flipY" src="../images/dmc3redorb.png" alt="dmc3 red orb">
+                <img class="flipY" src="images/dmc3redorb.png" alt="dmc3 red orb">
             </figure>
             <figure>
-                <img class="flipY" src="../images/dmc3purpleorb.png" alt="dmc3 purple orb">
+                <img class="flipY" src="images/dmc3purpleorb.png" alt="dmc3 purple orb">
             </figure>
             <figure>
-                <img class="flipY" src="../images/dmc3blueorb.png" alt="dmc3 blue orb">
+                <img class="flipY" src="images/dmc3blueorb.png" alt="dmc3 blue orb">
             </figure>
             </section>
 
