--- a/summon.html
+++ b/summon.html
@@ -3,8 +3,8 @@
 
     <head>
         <title>chorozon's crucifix</title>
-        <link rel="stylesheet" href="../styles/styles.css">
-        <script src="../scripts/scripts.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles/styles.css">
+        <script src="scripts/scripts.js"></script>
 
         <style>
 
@@ -14,7 +14,7 @@
 
         <body>
             <header>
-                <img class="topBanner" src="../images/headerBackground.gif">
+                <img class="topBanner" src="images/headerBackground.gif">
                 <nav><ul>
                     <li class="logo"><a href="index.html">dmc logo</a></li>
                     <li><a href="summon.html">summon</a></li>
