--- a/witness.html
+++ b/witness.html
@@ -6,13 +6,13 @@
 
     <head>
         <title>chorozon's crucifix</title>
-        <link rel="stylesheet" href="../styles/styles.css">
-        <script src="../scripts/scripts.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles/styles.css">
+        <script src="scripts/scripts.js"></script>
     </head>
 
         <body>
             <header>
-                <img class="topBanner" src="../images/headerBackground.gif">
+                <img class="topBanner" src="images/headerBackground.gif">
                 <nav><ul>
                     <li class="logo"><a href="index.html">dmc logo</a></li>
                     <li><a href="summon.html">summon</a></li>
@@ -55,15 +55,15 @@
 
             <section class="feature-box witness">
                 <div class="scroll-container">
-                    <img src="../images/forgotten.jpg" alt="forgotten">
-                    <img src="../images/burnitalldown.jpg" alt="burnitalldown">
-                    <img src="../images/funeral.jpg" alt="gmcomebackNOW">
-                    <img src="../images/palewatcher.jpg" alt="theywatch">
-                    <img src="../images/taken.jpg" alt="cross">
-                    <img src="../images/theywitnessedthezenith.jpg" alt="zenith">
-                    <img src="../images/paleweeper.jpg" alt="ponderingthezenith">
-                    <img src="../images/crucifix.jpg" alt="chorozons">
-                    <img src="../images/paleoutcast.jpg" alt="onethatwaslost">
+                    <img src="images/forgotten.jpg" alt="forgotten">
+                    <img src="images/burnitalldown.jpg" alt="burnitalldown">
+                    <img src="images/funeral.jpg" alt="gmcomebackNOW">
+                    <img src="images/palewatcher.jpg" alt="theywatch">
+                    <img src="images/taken.jpg" alt="cross">
+                    <img src="images/theywitnessedthezenith.jpg" alt="zenith">
+                    <img src="images/paleweeper.jpg" alt="ponderingthezenith">
+                    <img src="images/crucifix.jpg" alt="chorozons">
+                    <img src="images/paleoutcast.jpg" alt="onethatwaslost">
                   </div>
             </section>
 
